# idea-tui

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: app.rs  error.rs  main.rs  models.rs  theme.rs  ui.rs
