[package]
name = "idea-tui"
version = "0.1.0"
edition = "2024"
description = "A terminal-based launcher for IntelliJ IDEA projects."
repository = "https://github.com/your-username/idea-tui"
license = "MIT"
keywords = ["tui", "cli", "intellij", "jetbrains", "launcher"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
confy = "2.0.0"
crossterm = "0.29.0"
libc = "0.2.182"
ratatui = "0.30.0"
serde = "1.0.228"
serde_derive = "1.0.228"
dirs = "6.0.0"
thiserror = "2.0.0"

[dev-dependencies]
tempfile = "3.10.0"
